--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 /****************************** NAVBAR***************************/
 
 .header {
@@ -11,7 +16,7 @@
     font-weight: 700;
     width: 100%;
     z-index: 100;
-    background-color: white;
+    background-color: rgb(50, 50, 50);
     height: 64px;
     box-sizing: border-box;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
@@ -19,14 +24,13 @@
   .logo{
     display: flex;
     flex: 1;
-  }
-  
-  .logo {
     font-size: 1.2em;
     font-weight: 800;
+    color:white;
+    text-decoration-line:none ;
+    
   }
   
-
   
   .headerNav {
     flex: 2;
@@ -52,7 +56,7 @@
     height: 4px;
     bottom: 0;
     left: 0;
-    background-color: #f6ae2c;
+    background-color: white;
     border-radius: 100px;
     transition: all 0.2s ease-in-out;
     opacity: 0;
@@ -77,7 +81,7 @@
     height: 4px;
     border-radius: 100px;
     width: 100%;
-    background-color: #33323d;
+    background-color: white;
   }
   
   .mobileNav {
@@ -91,16 +95,17 @@
     flex-direction: column;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    background-color: white;
+    background-color: rgb(50, 50, 50);
   }
   
   .mobileNav .link {
     transition: all 0.15s ease-in-out;
     font-size: 0.9em;
     margin: 8px 0;
+    color: white;
   }
   .mobileNav .link:hover {
-    color: #f6ae2c;
+    color: white;
     transition: all 0.15s ease-in-out;
   }
   
@@ -111,6 +116,12 @@
   #toggleNav:checked + .mobileNav {
     opacity: 1;
     visibility: visible;
+  }
+
+  .link{
+    text-align: none;
+    color:white;
+    text-decoration-line: none;
   }
   
   .mobile {
