--- a/navbar&footer/hearder_footer.css
+++ b/navbar&footer/hearder_footer.css
@@ -130,7 +130,7 @@
 
   .footer_center{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
  
  .footer_center p{
