--- a/page/explication/explication.css
+++ b/page/explication/explication.css
@@ -1,3 +1,25 @@
 body{
     background-color: rgb(50, 50, 50);
 }
+
+.analyse{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    padding-top: 70px;
+    color: white;
+}
+
+.analyse h1{
+    text-align: center;
+    text-decoration: underline;
+}
+
+.analyse p {
+    padding-top: 20px;
+}
+
+.analyse h2{
+    padding-top: 20px;
+    text-decoration: underline;
+}
