--- a/acceuil.css
+++ b/acceuil.css
@@ -14,19 +14,11 @@ body{
     display: flex;
     justify-content: center;
     padding-top: 60px;
-
 }
 
-.mot1{
-    padding-right:500px ;
-}
 
-.mot2{
-    padding-left:500px ;
-}
-
-.mot3{
-    margin-bottom:100px ;
+h2{
+    color: white;
 }
 
 
